Spec § CP, Declarative Environment Records: Remove vestigial broken cross-reference

--- a/spec.html
+++ b/spec.html
@@ -238,7 +238,7 @@ Return the values of the topic binding of this Environment Record. This method i
 <emu-clause id=sec-declarative-environment-records-gettopicbinding>
 <h1><ins>GetTopicBinding ( )</ins></h1>
 <emu-note type=editor>
-<p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-declarative-environment-records-gettopicbinding>further modifications by Additional Feature NP</emu-xref>.</p>
+<p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
 </emu-note>
 <p>The method GetTopicBinding for declarative Environment Records returns the values of the record's topic binding. It must not be called when the record's topic binding has not already been established.</p>
 <emu-note>
