Spec § NP, Lexical Environments: Further update prose after simplification of topic binding

--- a/spec.html
+++ b/spec.html
@@ -141,7 +141,7 @@ Purpose
 *false* | *true*
 </td>
 <td>
-If [[TopicBindingStatus]]'s value is *true*, the Environment Record binds the Environment Record establishes its environment's topic binding (that is, it binds `#`) to a value. If the value is *false*, the Environment Record has no topic binding. [[TopicBindingStatus]]'s default value is *false*. Its value may be changed from *false* to *true* but never vice versa.
+If [[TopicBindingStatus]]'s value is *true*, the Environment Record binds the Environment Record establishes its environment's topic binding (that is, it binds `#`) to values. If the value is *false*, the Environment Record has no topic binding. [[TopicBindingStatus]]'s default value is *false*. Its value may be changed from *false* to *true* but never vice versa.
 </td>
 </tr>
 <tr>
@@ -1512,7 +1512,7 @@ Purpose
 *false* | *true*
 </td>
 <td>
-If [[TopicBindingStatus]]'s value is *true*, the Environment Record establishes its environment's topic binding (that is, it binds `#`<ins>, `##`, `###`, and `...`</ins>) to a value. If the value is *false*, the Environment Record has no topic binding. [[TopicBindingStatus]]'s default value is *false*. Its value may be changed from *false* to *true* but never vice versa.
+If [[TopicBindingStatus]]'s value is *true*, the Environment Record establishes its environment's topic binding (that is, it binds `#`<ins>, `##`, `###`, and `...`</ins>) to values. If the value is *false*, the Environment Record has no topic binding. [[TopicBindingStatus]]'s default value is *false*. Its value may be changed from *false* to *true* but never vice versa.
 </td>
 </tr>
 <tr>
